--- a/pom.xml
+++ b/pom.xml
@@ -2,8 +2,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>uk.ac.ebi.ampt2d</groupId>
-    <artifactId>accessioning-service</artifactId>
+    <groupId>uk.ac.ebi.eva</groupId>
+    <artifactId>eva-accession</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
