Changed variant categoryId to SS

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,4 +17,4 @@
 #
 accessioning.instanceId=instance-01;
 accessioning.variant.blockSize=1000
-accessioning.variant.categoryId=variant
+accessioning.variant.categoryId=ss
