--- a/eva-accession-ws/pom.xml
+++ b/eva-accession-ws/pom.xml
@@ -18,6 +18,13 @@
             <artifactId>eva-accession-core</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>uk.ac.ebi.eva</groupId>
+            <artifactId>eva-accession-core</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>test</scope>
+            <type>test-jar</type>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
