--- a/eva-accession-core/pom.xml
+++ b/eva-accession-core/pom.xml
@@ -11,6 +11,18 @@
     <artifactId>eva-accession-core</artifactId>
     <packaging>jar</packaging>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.2.2</version>
+        </dependency>
+    </dependencies>
+
     <repositories>
         <repository>
             <snapshots>
