--- a/eva-accession-ws/src/test/resources/accession-ws-test.properties
+++ b/eva-accession-ws/src/test/resources/accession-ws-test.properties
@@ -1,3 +1,3 @@
-accessioning.instanceId=test-ws-instance-01;
+accessioning.instanceId=test-ws-instance-01
 accessioning.variant.blockSize=1000
 accessioning.variant.categoryId=test-ss
