--- a/eva-accession-pipeline/src/test/resources/accession-pipeline-test.properties
+++ b/eva-accession-pipeline/src/test/resources/accession-pipeline-test.properties
@@ -10,6 +10,7 @@ parameters.projectAccession=project
 parameters.chunkSize=100
 parameters.vcf=src/test/resources/input-files/vcf/genotyped.vcf.gz
 parameters.vcfAggregation=NONE
+parameters.fasta=/input-files/mock.fa
 
 spring.jpa.show-sql=true
 
