--- a/eva-accession-pipeline/src/test/resources/accession-pipeline-test.properties
+++ b/eva-accession-pipeline/src/test/resources/accession-pipeline-test.properties
@@ -1,3 +1,5 @@
 accessioning.instanceId=test-instance-01
 accessioning.variant.blockSize=1000
 accessioning.variant.categoryId=test-ss
+
+accessioning.monotonic.init.test-ss=10000000000
