Called writer in step, test implementation in progress

--- a/eva-accession-pipeline/src/test/resources/accession-pipeline-test.properties
+++ b/eva-accession-pipeline/src/test/resources/accession-pipeline-test.properties
@@ -3,3 +3,8 @@ accessioning.variant.blockSize=1000
 accessioning.variant.categoryId=test-ss
 
 accessioning.monotonic.init.test-ss=10000000000
+
+variant.assemblyAccession=assembly
+variant.taxonomyAccession=1111
+variant.projectAccession=project
+variant.chunkSize=100
