--- a/eva-accession-pipeline/pom.xml
+++ b/eva-accession-pipeline/pom.xml
@@ -29,5 +29,10 @@
             <artifactId>eva-accession-core</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.batch</groupId>
+            <artifactId>spring-batch-test</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
