work in progress

--- a/eva-accession-pipeline/src/test/resources/accession-pipeline-test.properties
+++ b/eva-accession-pipeline/src/test/resources/accession-pipeline-test.properties
@@ -4,7 +4,8 @@ accessioning.variant.categoryId=test-ss
 
 accessioning.monotonic.init.test-ss=10000000000
 
-variant.assemblyAccession=assembly
-variant.taxonomyAccession=1111
-variant.projectAccession=project
-variant.chunkSize=100
+parameters.assemblyAccession=assembly
+parameters.taxonomyAccession=1111
+parameters.projectAccession=project
+parameters.chunkSize=100
+parameters.vcf=test.vcf
