configuration is not working for step test
the service seems to be writing the accessions but it's unable to
retrieve them (as if the DB was empty).

--- a/eva-accession-pipeline/src/test/resources/accession-pipeline-test.properties
+++ b/eva-accession-pipeline/src/test/resources/accession-pipeline-test.properties
@@ -8,4 +8,6 @@ parameters.assemblyAccession=assembly
 parameters.taxonomyAccession=1111
 parameters.projectAccession=project
 parameters.chunkSize=100
-parameters.vcf=test.vcf
+parameters.vcf=src/test/resources/input-files/vcf/genotyped.vcf.gz
+parameters.vcfAggregation=NONE
+parameters.studyId=study
