--- a/eva-accession-pipeline/src/test/resources/accession-pipeline-test.properties
+++ b/eva-accession-pipeline/src/test/resources/accession-pipeline-test.properties
@@ -11,3 +11,5 @@ parameters.chunkSize=100
 parameters.vcf=src/test/resources/input-files/vcf/genotyped.vcf.gz
 parameters.vcfAggregation=NONE
 parameters.studyId=study
+
+spring.jpa.show-sql=true
