--- a/eva-accession-pipeline/src/test/resources/accession-pipeline-test.properties
+++ b/eva-accession-pipeline/src/test/resources/accession-pipeline-test.properties
@@ -10,7 +10,9 @@ parameters.projectAccession=project
 parameters.chunkSize=100
 parameters.vcf=src/test/resources/input-files/vcf/genotyped.vcf.gz
 parameters.vcfAggregation=NONE
-parameters.fasta=/input-files/mock.fa
+
+parameters.fasta=src/test/resources/input-files/fasta/Homo_sapiens.GRCh38.dna.chromosome.20.2000-lines.fa
+parameters.outputVcf=/tmp/accession-output.vcf
 
 spring.jpa.show-sql=true
 
