--- a/eva-accession-pipeline/src/test/resources/accession-pipeline-test.properties
+++ b/eva-accession-pipeline/src/test/resources/accession-pipeline-test.properties
@@ -12,3 +12,5 @@ parameters.vcf=src/test/resources/input-files/vcf/genotyped.vcf.gz
 parameters.vcfAggregation=NONE
 
 spring.jpa.show-sql=true
+
+spring.data.mongodb.database=test-db
