--- a/eva-accession-core/src/test/resources/accession-test.properties
+++ b/eva-accession-core/src/test/resources/accession-test.properties
@@ -1,3 +1,5 @@
 accessioning.instanceId=test-instance-01
 accessioning.variant.blockSize=1000
 accessioning.variant.categoryId=test-ss
+
+spring.data.mongodb.database=test-db
