--- a/eva-accession-pipeline/src/main/resources/application.properties
+++ b/eva-accession-pipeline/src/main/resources/application.properties
@@ -5,12 +5,15 @@ spring.datasource.url=
 spring.datasource.username=
 spring.datasource.password=
 
+accessioning.instanceId=
+accessioning.variant.blockSize=
+accessioning.variant.categoryId=
+
 spring.jpa.generate-ddl=true
 
 parameters.assemblyAccession=
 parameters.taxonomyAccession=
 parameters.projectAccession=
-parameters.studyId=
 
 parameters.vcf=
 parameters.vcfAggregation=
