--- a/eva-accession-pipeline/src/main/resources/application.properties
+++ b/eva-accession-pipeline/src/main/resources/application.properties
@@ -1,15 +1,10 @@
 spring.batch.job.names=
 
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=
-spring.datasource.username=
-spring.datasource.password=
-
 accessioning.instanceId=
-accessioning.variant.blockSize=
-accessioning.variant.categoryId=
+accessioning.variant.blockSize=1000
+accessioning.variant.categoryId=ss
 
-spring.jpa.generate-ddl=true
+accessioning.monotonic.init.ss=10000000000
 
 parameters.assemblyAccession=
 parameters.taxonomyAccession=
@@ -21,3 +16,12 @@ parameters.fasta=
 
 parameters.chunkSize=
 parameters.forceRestart=
+
+
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=
+spring.datasource.username=
+spring.datasource.password=
+
+# Only to set up the database!
+# spring.jpa.generate-ddl=true
