--- a/eva-accession-core/pom.xml
+++ b/eva-accession-core/pom.xml
@@ -24,7 +24,7 @@
         <dependency>
             <groupId>uk.ac.ebi.ampt2d</groupId>
             <artifactId>accessioning-commons</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>0.1</version>
         </dependency>
     </dependencies>
 
