make webservices tests work with mongo

--- a/eva-accession-ws/pom.xml
+++ b/eva-accession-ws/pom.xml
@@ -32,6 +32,13 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>com.github.fakemongo</groupId>
+            <artifactId>fongo</artifactId>
+            <scope>test</scope>
+            <version>2.1.1</version>
+        </dependency>
     </dependencies>
 
     <build>
