--- a/eva-accession-pipeline/src/main/resources/application.properties
+++ b/eva-accession-pipeline/src/main/resources/application.properties
@@ -17,6 +17,7 @@ parameters.fasta=
 parameters.chunkSize=
 parameters.forceRestart=
 
+spring.data.mongodb.database=
 
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=
