--- a/eva-accession-ws/src/main/resources/application.properties
+++ b/eva-accession-ws/src/main/resources/application.properties
@@ -2,6 +2,8 @@ accessioning.instanceId=
 accessioning.variant.blockSize=1000
 accessioning.variant.categoryId=ss
 
+spring.data.mongodb.database=
+
 spring.datasource.driver-class-name=
 spring.datasource.url=
 spring.datasource.username=
