--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <com.github.fakemongo.version>2.1.1</com.github.fakemongo.version>
     </properties>
 
     <parent>
