--- a/pom.xml
+++ b/pom.xml
@@ -26,13 +26,17 @@
         <version>1.5.10.RELEASE</version>
     </parent>
 
-    <dependencies>
-        <dependency>
-            <groupId>uk.ac.ebi.ampt2d</groupId>
-            <artifactId>accessioning-commons</artifactId>
-            <version>0.1</version>
-        </dependency>
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>uk.ac.ebi.ampt2d</groupId>
+                <artifactId>accessioning-commons</artifactId>
+                <version>0.2</version>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 
+    <dependencies>
         <dependency>
             <!--https://docs.spring.io/spring-boot/docs/1.5.3.RELEASE/reference/html/configuration-metadata.html#
             configuration-metadata-annotation-processor-->
