Used toUri instead of getFile to get path File in order to support windows. Added windows temp path (commented) in accession-pipeline-test.properties, it must be used when running test in windows. Git property core.autocrlf must be set to input if using a windows machine so line ending will be LF instead of CRLF.

--- a/eva-accession-pipeline/src/test/resources/accession-pipeline-test.properties
+++ b/eva-accession-pipeline/src/test/resources/accession-pipeline-test.properties
@@ -13,6 +13,7 @@ parameters.vcfAggregation=NONE
 
 parameters.fasta=src/test/resources/input-files/fasta/Homo_sapiens.GRCh38.dna.chromosome.20.2000-lines.fa
 parameters.outputVcf=/tmp/accession-output.vcf
+#(Windows path) parameters.outputVcf=C:/Users/(user)/AppData/Local/Temp/accession-output.vcf
 
 spring.jpa.show-sql=true
 
