--- a/eva-accession-pipeline/src/test/resources/accession-pipeline-test.properties
+++ b/eva-accession-pipeline/src/test/resources/accession-pipeline-test.properties
@@ -11,7 +11,7 @@ parameters.chunkSize=100
 parameters.vcf=src/test/resources/input-files/vcf/genotyped.vcf.gz
 parameters.vcfAggregation=NONE
 
-parameters.fasta=src/test/resources/input-files/fasta/Homo_sapiens.GRCh38.dna.chromosome.20.2000-lines.fa
+parameters.fasta=src/test/resources/input-files/fasta/Homo_sapiens.GRCh37.75.chr20.head_1200.fa
 parameters.outputVcf=/tmp/accession-output.vcf
 
 spring.jpa.show-sql=true
