--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>uk.ac.ebi.eva</groupId>
     <artifactId>eva-accession</artifactId>
-    <version>0.1-SNAPSHOT</version>
+    <version>0.1</version>
     <packaging>pom</packaging>
 
     <name>eva-accession</name>
@@ -31,8 +31,13 @@
         <dependencies>
             <dependency>
                 <groupId>uk.ac.ebi.ampt2d</groupId>
-                <artifactId>accessioning-commons</artifactId>
-                <version>0.3-SNAPSHOT</version>
+                <artifactId>accession-commons-mongodb</artifactId>
+                <version>0.4-SNAPSHOT</version>
+            </dependency>
+            <dependency>
+                <groupId>uk.ac.ebi.ampt2d</groupId>
+                <artifactId>accession-commons-monotonic-generator-jpa</artifactId>
+                <version>0.4-SNAPSHOT</version>
             </dependency>
 
             <dependency>
