--- a/pom.xml
+++ b/pom.xml
@@ -70,8 +70,9 @@
         </dependency>
 
         <dependency>
-            <groupId>com.h2database</groupId>
-            <artifactId>h2</artifactId>
+            <groupId>org.hsqldb</groupId>
+            <artifactId>hsqldb</artifactId>
+            <version>2.3.4</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
