--- a/.travis.yml
+++ b/.travis.yml
@@ -4,3 +4,14 @@ language: java
 
 jdk:
   - oraclejdk8
+
+env:
+  - MONGODB_VERSION=3.2.17
+
+install:
+  - wget http://fastdl.mongodb.org/linux/mongodb-linux-x86_64-$MONGODB_VERSION.tgz
+  - tar xfz mongodb-linux-x86_64-$MONGODB_VERSION.tgz
+  - export PATH=`pwd`/mongodb-linux-x86_64-$MONGODB_VERSION/bin:$PATH
+  - mkdir -p data/db
+  - mongod --dbpath=data/db &
+  - mongod --version
