not working: split mongo configuration doesn't allow several hosts

--- a/eva-accession-ws/src/main/resources/application.properties
+++ b/eva-accession-ws/src/main/resources/application.properties
@@ -1,10 +1,15 @@
-accessioning.instanceId=
+accessioning.instanceId=rest-instance
 accessioning.variant.blockSize=1000
 accessioning.variant.categoryId=ss
 
-spring.data.mongodb.database=
+spring.data.mongodb.host=@eva.mongo.host@
+spring.data.mongodb.username=@eva.mongo.user@
+spring.data.mongodb.password=@eva.mongo.passwd@
+spring.data.mongodb.database=@eva.accession.mongo.database@
+spring.data.mongodb.authentication-database=admin
+mongodb.read-preference=@eva.mongo.read-preference@
 
-spring.datasource.driver-class-name=
-spring.datasource.url=
-spring.datasource.username=
-spring.datasource.password=
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=@eva.accession.jdbc.url@
+spring.datasource.username=@eva.accession.user@
+spring.datasource.password=@eva.accession.password@
