--- a/eva-accession-ws/src/test/resources/accession-ws-test.properties
+++ b/eva-accession-ws/src/test/resources/accession-ws-test.properties
@@ -2,4 +2,9 @@ accessioning.instanceId=test-ws-instance-01
 accessioning.variant.blockSize=1000
 accessioning.variant.categoryId=test-ss
 
+spring.datasource.driver-class-name=org.hsqldb.jdbcDriver
+spring.datasource.url=jdbc:hsqldb:mem:db;sql.syntax_pgs=true;DB_CLOSE_DELAY=-1
+spring.datasource.username=SA
+spring.datasource.password=
+
 spring.data.mongodb.database=test-db
