fix readPreference configuration

--- a/eva-accession-pipeline/src/test/resources/accession-pipeline-test.properties
+++ b/eva-accession-pipeline/src/test/resources/accession-pipeline-test.properties
@@ -18,3 +18,4 @@ parameters.outputVcf=/tmp/accession-output.vcf
 spring.jpa.show-sql=true
 
 spring.data.mongodb.database=test-db
+mongodb.read-preference=primary
