--- a/eva-accession-ws/src/main/resources/application.properties
+++ b/eva-accession-ws/src/main/resources/application.properties
@@ -4,6 +4,7 @@ accessioning.variant.categoryId=ss
 
 spring.data.mongodb.uri=mongodb://£eva.mongo.user£:£eva.mongo.passwd.url-encoded£@£eva.mongo.host£/admin
 spring.data.mongodb.database=£eva.accession.mongo.database£
+mongodb.read-preference=£eva.mongo.read-preference£
 
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=£eva.accession.jdbc.url£
