use the custom delimiter '|' for filtering all across the project
don't use £ because it might be hard to write in other keyboard distributions

--- a/eva-accession-pipeline/src/main/resources/application.properties
+++ b/eva-accession-pipeline/src/main/resources/application.properties
@@ -18,7 +18,7 @@ parameters.chunkSize=
 parameters.forceRestart=
 
 spring.data.mongodb.database=
-mongodb.read-preference=@eva.mongo.read-preference@
+mongodb.read-preference=|eva.mongo.read-preference|
 
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=
