--- a/eva-accession-core/src/test/resources/ss-accession-test.properties
+++ b/eva-accession-core/src/test/resources/ss-accession-test.properties
@@ -6,3 +6,5 @@ spring.data.mongodb.database=submitted-variants-test
 spring.data.mongodb.host=localhost
 spring.data.mongodb.password=
 spring.data.mongodb.port=27017
+
+mongodb.read-preference=primary
