--- a/eva-accession-core/pom.xml
+++ b/eva-accession-core/pom.xml
@@ -13,6 +13,11 @@
 
     <dependencies>
         <dependency>
+            <groupId>uk.ac.ebi.eva</groupId>
+            <artifactId>variation-commons-core</artifactId>
+            <version>0.6-SNAPSHOT</version>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
@@ -38,6 +43,11 @@
             <artifactId>nosqlunit-mongodb</artifactId>
             <version>1.0.0-rc.5</version>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.github.samtools</groupId>
+            <artifactId>htsjdk</artifactId>
+            <version>2.14.1</version>
         </dependency>
     </dependencies>
 
