Added property to limit the number of connections created by the pool

--- a/eva-accession-pipeline/src/main/resources/application.properties
+++ b/eva-accession-pipeline/src/main/resources/application.properties
@@ -24,6 +24,7 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=
 spring.datasource.username=
 spring.datasource.password=
+spring.datasource.tomcat.max-active=3
 
 # Only to set up the database!
 # spring.jpa.generate-ddl=true
