--- a/eva-accession-import/pom.xml
+++ b/eva-accession-import/pom.xml
@@ -26,6 +26,11 @@
             <groupId>com.github.fakemongo</groupId>
             <artifactId>fongo</artifactId>
         </dependency>
+        <dependency>
+            <groupId>uk.ac.ebi.eva</groupId>
+            <artifactId>variation-commons-core</artifactId>
+            <version>0.5</version>
+        </dependency>
         <!--TODO : add PostgreSQL driver with scope runtime for production deployment-->
     </dependencies>
 
