add composite processor

--- a/eva-accession-import/src/test/resources/application.properties
+++ b/eva-accession-import/src/test/resources/application.properties
@@ -4,3 +4,14 @@ dbsnp.datasource.username=SA
 dbsnp.datasource.password=
 dbsnp.datasource.schema=src/test/resources/dbsnp-mirror-schema.sql
 dbsnp.datasource.data=src/test/resources/dbsnp-mirror-data.sql
+
+parameters.fasta=src/test/resources/input-files/fasta/Gallus_gallus-5.0.test.fa
+parameters.assemblyReportUrl=file:src/test/resources/input-files/assembly-report/GCF_000002315.4_Gallus_gallus-5.0_assembly_report.txt
+parameters.assembly=Gallus_gallus-5.0
+parameters.assemblyAccession=GCF_000002315.4
+parameters.taxonomyAccession=9031
+parameters.chunkSize=100
+parameters.forceRestart=false
+parameters.pageSize=100
+
+mongodb.read-preference=primary
