--- a/pom.xml
+++ b/pom.xml
@@ -42,7 +42,7 @@
             <dependency>
                 <groupId>uk.ac.ebi.eva</groupId>
                 <artifactId>variation-commons-core</artifactId>
-                <version>0.6-SNAPSHOT</version>
+                <version>0.6</version>
             </dependency>
 
             <dependency>
