Changed update, patch, deprecate and merge in SubmittedVariantAccessioningService to support DbsnpSubmittedVariants. Modified Tests.

--- a/eva-accession-core/src/test/resources/ss-accession-test.properties
+++ b/eva-accession-core/src/test/resources/ss-accession-test.properties
@@ -2,6 +2,8 @@ accessioning.instanceId=test-instance-01
 accessioning.variant.blockSize=1000
 accessioning.variant.categoryId=test-ss
 
+accessioning.monotonic.init.ss=5000000000
+
 spring.data.mongodb.database=submitted-variants-test
 spring.data.mongodb.host=localhost
 spring.data.mongodb.password=
