--- a/eva-accession-import/src/test/resources/test-variants-writer.properties
+++ b/eva-accession-import/src/test/resources/test-variants-writer.properties
@@ -1,3 +1,4 @@
 accessioning.instanceId=test-instance-01
 accessioning.variant.blockSize=1000
 accessioning.variant.categoryId=test-ss
+accessioning.monotonic.init.ss=5000000000
