Added init.ss property to test .properties files in ws and pipeline modules

--- a/eva-accession-pipeline/src/test/resources/accession-pipeline-test.properties
+++ b/eva-accession-pipeline/src/test/resources/accession-pipeline-test.properties
@@ -1,8 +1,8 @@
 accessioning.instanceId=test-instance-01
 accessioning.variant.blockSize=1000
-accessioning.variant.categoryId=test-ss
+accessioning.variant.categoryId=ss
 
-accessioning.monotonic.init.test-ss=10000000000
+accessioning.monotonic.init.ss=5000000000
 
 parameters.assemblyAccession=assembly
 parameters.taxonomyAccession=1111
