--- a/eva-accession-ws/src/test/resources/accession-ws-test.properties
+++ b/eva-accession-ws/src/test/resources/accession-ws-test.properties
@@ -1,6 +1,8 @@
 accessioning.instanceId=test-ws-instance-01
 accessioning.variant.blockSize=1000
-accessioning.variant.categoryId=test-ss
+accessioning.variant.categoryId=ss
+
+accessioning.monotonic.init.ss=5000000000
 
 spring.datasource.driver-class-name=org.hsqldb.jdbcDriver
 spring.datasource.url=jdbc:hsqldb:mem:db;sql.syntax_pgs=true;DB_CLOSE_DELAY=-1
