update to blockParameters interface change
now it's map<category, map<key, value>>

--- a/eva-accession-pipeline/src/main/resources/application.properties
+++ b/eva-accession-pipeline/src/main/resources/application.properties
@@ -1,10 +1,11 @@
 spring.batch.job.names=
 
 accessioning.instanceId=
-accessioning.variant.blockSize=100000
 accessioning.variant.categoryId=ss
 
-accessioning.monotonic.init.ss=5000000000
+accessioning.monotonic.ss.blockSize=100000
+accessioning.monotonic.ss.blockStartValue=5000000000
+accessioning.monotonic.ss.nextBlockInterval=1000000000
 
 parameters.assemblyAccession=
 parameters.taxonomyAccession=
