--- a/eva-accession-pipeline/src/test/resources/accession-pipeline-test.properties
+++ b/eva-accession-pipeline/src/test/resources/accession-pipeline-test.properties
@@ -1,8 +1,9 @@
 accessioning.instanceId=test-instance-01
-accessioning.variant.blockSize=1000
-accessioning.variant.categoryId=ss
+accessioning.variant.categoryId=test-pipeline-ss
 
-accessioning.monotonic.init.ss=5000000000
+accessioning.monotonic.test-pipeline-ss.blockSize=100000
+accessioning.monotonic.test-pipeline-ss.blockStartValue=5000000000
+accessioning.monotonic.test-pipeline-ss.nextBlockInterval=1000000000
 
 parameters.assemblyAccession=assembly
 parameters.taxonomyAccession=1111
