--- a/eva-accession-ws/src/main/resources/application.properties
+++ b/eva-accession-ws/src/main/resources/application.properties
@@ -1,6 +1,9 @@
 accessioning.instanceId=rest-instance
-accessioning.variant.blockSize=1000
 accessioning.variant.categoryId=ss
+
+accessioning.monotonic.ss.blockSize=100000
+accessioning.monotonic.ss.blockStartValue=5000000000
+accessioning.monotonic.ss.nextBlockInterval=1000000000
 
 spring.data.mongodb.uri=mongodb://|eva.mongo.user|:|eva.mongo.passwd.url-encoded|@|eva.mongo.host|/admin
 spring.data.mongodb.database=|eva.accession.mongo.database|
