--- a/eva-accession-ws/src/test/resources/accession-ws-test.properties
+++ b/eva-accession-ws/src/test/resources/accession-ws-test.properties
@@ -1,8 +1,9 @@
 accessioning.instanceId=test-ws-instance-01
-accessioning.variant.blockSize=1000
-accessioning.variant.categoryId=ss
+accessioning.variant.categoryId=test-ss
 
-accessioning.monotonic.init.ss=5000000000
+accessioning.monotonic.test-ss.blockSize=100000
+accessioning.monotonic.test-ss.blockStartValue=5000000000
+accessioning.monotonic.test-ss.nextBlockInterval=1000000000
 
 spring.datasource.driver-class-name=org.hsqldb.jdbcDriver
 spring.datasource.url=jdbc:hsqldb:mem:db;sql.syntax_pgs=true;DB_CLOSE_DELAY=-1
