use mongo instead of mongo for tests

--- a/eva-accession-import/src/test/resources/test-variants-writer.properties
+++ b/eva-accession-import/src/test/resources/test-variants-writer.properties
@@ -4,3 +4,10 @@ accessioning.variant.categoryId=test-ss
 accessioning.monotonic.test-ss.blockSize=100000
 accessioning.monotonic.test-ss.blockStartValue=5000000000
 accessioning.monotonic.test-ss.nextBlockInterval=1000000000
+
+spring.data.mongodb.database=submitted-variants-test
+spring.data.mongodb.host=localhost
+spring.data.mongodb.password=
+spring.data.mongodb.port=27017
+
+mongodb.read-preference=primary
