Added classes required to generate and query clustered variants, modified properties names, moved entity to core module

--- a/eva-accession-core/src/test/resources/ss-accession-test.properties
+++ b/eva-accession-core/src/test/resources/ss-accession-test.properties
@@ -1,5 +1,5 @@
 accessioning.instanceId=test-instance-01
-accessioning.variant.categoryId=test-ss
+accessioning.submitted.categoryId=test-ss
 
 accessioning.monotonic.test-ss.blockSize=100000
 accessioning.monotonic.test-ss.blockStartValue=5000000000
