--- a/eva-accession-pipeline/src/main/resources/application.properties
+++ b/eva-accession-pipeline/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.batch.job.names=
 
 accessioning.instanceId=
-accessioning.variant.categoryId=ss
+accessioning.submitted.categoryId=ss
 
 accessioning.monotonic.ss.blockSize=100000
 accessioning.monotonic.ss.blockStartValue=5000000000
