--- a/eva-accession-ws/src/main/resources/application.properties
+++ b/eva-accession-ws/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 accessioning.instanceId=rest-instance
-accessioning.variant.categoryId=ss
+accessioning.submitted.categoryId=ss
 
 accessioning.monotonic.ss.blockSize=100000
 accessioning.monotonic.ss.blockStartValue=5000000000
