--- a/eva-accession-import/src/test/resources/test-variants-writer.properties
+++ b/eva-accession-import/src/test/resources/test-variants-writer.properties
@@ -1,5 +1,5 @@
 accessioning.instanceId=test-instance-01
-accessioning.variant.categoryId=test-ss
+accessioning.submitted.categoryId=test-ss
 
 accessioning.monotonic.test-ss.blockSize=100000
 accessioning.monotonic.test-ss.blockStartValue=5000000000
