--- a/eva-accession-pipeline/src/test/resources/accession-pipeline-test.properties
+++ b/eva-accession-pipeline/src/test/resources/accession-pipeline-test.properties
@@ -1,5 +1,5 @@
 accessioning.instanceId=test-instance-01
-accessioning.variant.categoryId=test-pipeline-ss
+accessioning.submitted.categoryId=test-pipeline-ss
 
 accessioning.monotonic.test-pipeline-ss.blockSize=100000
 accessioning.monotonic.test-pipeline-ss.blockStartValue=5000000000
