--- a/eva-accession-ws/src/test/resources/accession-ws-test.properties
+++ b/eva-accession-ws/src/test/resources/accession-ws-test.properties
@@ -1,9 +1,14 @@
 accessioning.instanceId=test-ws-instance-01
-accessioning.variant.categoryId=test-ss
 
+accessioning.submitted.categoryId=test-ss
 accessioning.monotonic.test-ss.blockSize=100000
 accessioning.monotonic.test-ss.blockStartValue=5000000000
 accessioning.monotonic.test-ss.nextBlockInterval=1000000000
+
+accessioning.clustered.categoryId=test-rs
+accessioning.monotonic.test-rs.blockSize=100000
+accessioning.monotonic.test-rs.blockStartValue=3000000000
+accessioning.monotonic.test-rs.nextBlockInterval=1000000000
 
 spring.datasource.driver-class-name=org.hsqldb.jdbcDriver
 spring.datasource.url=jdbc:hsqldb:mem:db;sql.syntax_pgs=true;DB_CLOSE_DELAY=-1
