--- a/eva-accession-ws/pom.xml
+++ b/eva-accession-ws/pom.xml
@@ -55,6 +55,12 @@
             <groupId>io.springfox</groupId>
             <artifactId>springfox-swagger-ui</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.hsqldb</groupId>
+            <artifactId>hsqldb</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
