--- a/eva-accession-ws/src/test/resources/accession-ws-test.properties
+++ b/eva-accession-ws/src/test/resources/accession-ws-test.properties
@@ -15,4 +15,6 @@ spring.datasource.url=jdbc:hsqldb:mem:db;sql.syntax_pgs=true;DB_CLOSE_DELAY=-1
 spring.datasource.username=SA
 spring.datasource.password=
 
-spring.data.mongodb.database=test-db
+spring.data.mongodb.uri=mongodb://localhost:27017
+spring.data.mongodb.database=eva-accession-ws-test-db
+mongodb.read-preference=primary
