Addressed some PR comments

--- a/eva-accession-import/src/main/resources/application.properties
+++ b/eva-accession-import/src/main/resources/application.properties
@@ -24,14 +24,13 @@ dbsnp.datasource.username=
 dbsnp.datasource.password=
 dbsnp.datasource.tomcat.max-active=
 
-# MongoDB for storing generated accessions
+# MongoDB for storing imported accessions
 spring.data.mongodb.host=
 spring.data.mongodb.port=
 spring.data.mongodb.database=
 spring.data.mongodb.username=
 spring.data.mongodb.password=
 spring.data.mongodb.authentication-database=admin
-# is the following property being used?
-mongodb.read-preference=secondaryPreferred
+mongodb.read-preference=primaryPreferred
 
 spring.main.web-environment=false
