--- a/eva-accession-import/pom.xml
+++ b/eva-accession-import/pom.xml
@@ -36,6 +36,11 @@
             <artifactId>postgresql</artifactId>
             <scope>runtime</scope>
         </dependency>
+        <dependency>
+            <groupId>uk.ac.ebi.eva</groupId>
+            <artifactId>variation-commons-batch</artifactId>
+            <version>0.6-SNAPSHOT</version>
+        </dependency>
 
     </dependencies>
     <build>
