--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,11 @@
                 <artifactId>variation-commons-core</artifactId>
                 <version>0.6</version>
             </dependency>
+            <dependency>
+                <groupId>uk.ac.ebi.eva</groupId>
+                <artifactId>variation-commons-batch</artifactId>
+                <version>0.6</version>
+            </dependency>
 
             <dependency>
                 <groupId>com.github.fakemongo</groupId>
