Input parameter name fixed, properties revised

--- a/eva-accession-import/src/main/resources/application.properties
+++ b/eva-accession-import/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+spring.batch.job.names=IMPORT_DBSNP_VARIANTS_JOB
+
 parameters.assemblyAccession=
 parameters.assemblyName=
 parameters.assemblyReportUrl=
@@ -7,15 +9,15 @@ parameters.chunkSize=100
 parameters.forceRestart=false
 parameters.fasta=
 
-spring.batch.job.names=IMPORT_DBSNP_VARIANTS_JOB
-
 # job repository datasource
-spring.datasource.driver-class-name=
+spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=
 spring.datasource.username=
 spring.datasource.password=
 spring.datasource.tomcat.max-active=3
-spring.jpa.generate-ddl=true
+
+# Only to set up the database!
+# spring.jpa.generate-ddl=true
 
 # dbSNP mirror datasource
 dbsnp.datasource.driver-class-name=org.postgresql.Driver
