--- a/eva-accession-import/src/test/resources/application.properties
+++ b/eva-accession-import/src/test/resources/application.properties
@@ -2,8 +2,8 @@ dbsnp.datasource.driver-class-name=org.hsqldb.jdbcDriver
 dbsnp.datasource.url=jdbc:hsqldb:mem:db;sql.syntax_pgs=true;DB_CLOSE_DELAY=-1
 dbsnp.datasource.username=SA
 dbsnp.datasource.password=
-dbsnp.datasource.schema=src/test/resources/dbsnp-mirror-schema.sql
-dbsnp.datasource.data=src/test/resources/dbsnp-mirror-data.sql
+dbsnp.datasource.schema=src/test/resources/test-data/dbsnp-mirror-schema.sql
+dbsnp.datasource.data=src/test/resources/test-data/dbsnp-mirror-data.sql
 
 parameters.fasta=src/test/resources/input-files/fasta/Gallus_gallus-5.0.test.fa
 parameters.assemblyReportUrl=file:src/test/resources/input-files/assembly-report/GCF_000002315.4_Gallus_gallus-5.0_assembly_report.txt
@@ -13,5 +13,10 @@ parameters.taxonomyAccession=9031
 parameters.chunkSize=100
 parameters.forceRestart=false
 parameters.pageSize=100
+
+spring.data.mongodb.database=dbsnp-import-test
+spring.data.mongodb.host=localhost
+spring.data.mongodb.password=
+spring.data.mongodb.port=27017
 
 mongodb.read-preference=primary
