use a specific test properties file for ProjectAccessionMappingTest

--- a/eva-accession-import/src/test/resources/test-project-accession-mapping.properties
+++ b/eva-accession-import/src/test/resources/test-project-accession-mapping.properties
@@ -14,4 +14,9 @@ parameters.chunkSize=100
 parameters.forceRestart=false
 parameters.pageSize=100
 
+spring.data.mongodb.database=testProjectAccessionMapping
+spring.data.mongodb.host=localhost
+spring.data.mongodb.password=
+spring.data.mongodb.port=27017
+
 mongodb.read-preference=primary
