--- a/pom.xml
+++ b/pom.xml
@@ -32,12 +32,12 @@
             <dependency>
                 <groupId>uk.ac.ebi.ampt2d</groupId>
                 <artifactId>accession-commons-mongodb</artifactId>
-                <version>0.5-SNAPSHOT</version>
+                <version>0.5.1</version>
             </dependency>
             <dependency>
                 <groupId>uk.ac.ebi.ampt2d</groupId>
                 <artifactId>accession-commons-monotonic-generator-jpa</artifactId>
-                <version>0.5-SNAPSHOT</version>
+                <version>0.5.1</version>
             </dependency>
             <dependency>
                 <groupId>uk.ac.ebi.eva</groupId>
