Accessioning pipeline not instantiating a web server

--- a/eva-accession-pipeline/src/main/resources/application.properties
+++ b/eva-accession-pipeline/src/main/resources/application.properties
@@ -29,3 +29,5 @@ spring.datasource.tomcat.max-active=3
 
 # Only to set up the database!
 # spring.jpa.generate-ddl=true
+
+spring.main.web-environment=false
