--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,11 @@
                 <version>1.0.0-rc.5</version>
                 <scope>test</scope>
             </dependency>
+            <dependency>
+                <groupId>com.github.samtools</groupId>
+                <artifactId>htsjdk</artifactId>
+                <version>2.14.3</version>
+            </dependency>
 
             <dependency>
                 <groupId>io.springfox</groupId>
