--- a/eva-accession-release/pom.xml
+++ b/eva-accession-release/pom.xml
@@ -27,6 +27,11 @@
             <artifactId>variation-commons-core</artifactId>
         </dependency>
         <dependency>
+            <groupId>uk.ac.ebi.eva</groupId>
+            <artifactId>eva-accession-import</artifactId>
+            <version>0.3.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
             <groupId>com.github.samtools</groupId>
             <artifactId>htsjdk</artifactId>
         </dependency>
