--- a/eva-accession-import/src/main/resources/application.properties
+++ b/eva-accession-import/src/main/resources/application.properties
@@ -27,12 +27,12 @@ dbsnp.datasource.password=
 dbsnp.datasource.tomcat.max-active=
 
 # MongoDB for storing imported accessions
-#spring.data.mongodb.host=
-#spring.data.mongodb.port=
-#spring.data.mongodb.database=
-#spring.data.mongodb.username=
-#spring.data.mongodb.password=
-#spring.data.mongodb.authentication-database=admin
+spring.data.mongodb.host=
+spring.data.mongodb.port=
+spring.data.mongodb.database=
+spring.data.mongodb.username=
+spring.data.mongodb.password=
+spring.data.mongodb.authentication-database=admin
 mongodb.read-preference=primaryPreferred
 
 spring.main.web-environment=false
