--- a/eva-accession-release/src/test/resources/application.properties
+++ b/eva-accession-release/src/test/resources/application.properties
@@ -8,7 +8,7 @@ accessioning.monotonic.test-pipeline-ss.nextBlockInterval=1000000000
 spring.jpa.show-sql=true
 
 parameters.assemblyAccession=GCF_000409795.2
-parameters.fasta=src/test/resources/input-files/fasta/GCF_000409795.2-NC_023654.1-10.fna
+parameters.fasta=src/test/resources/input-files/fasta/GCF_000409795.2.test.fna
 parameters.assemblyReportUrl=file:src/test/resources/input-files/assembly_report/GCF_000409795.2_Chlorocebus_sabeus_1.1_assembly_report.txt
 parameters.outputVcf=/tmp/output.vcf
 parameters.forceRestart=false
