add releaseJob test and some logs

--- a/eva-accession-release/src/main/resources/application.properties
+++ b/eva-accession-release/src/main/resources/application.properties
@@ -27,3 +27,5 @@ spring.data.mongodb.authentication-database=admin
 mongodb.read-preference=|eva.mongo.read-preference|
 
 spring.main.web-environment=false
+
+logging.level.uk.ac.ebi.eva.accession.dbsnp=INFO
