improve eva-accession-release listeners

--- a/eva-accession-release/src/main/resources/application.properties
+++ b/eva-accession-release/src/main/resources/application.properties
@@ -5,6 +5,7 @@ parameters.fasta=
 parameters.assemblyReportUrl=
 parameters.outputVcf=
 parameters.forceRestart=false
+parameters.chunkSize=1000
 
 # job repository datasource
 spring.datasource.driver-class-name=org.postgresql.Driver
