--- a/eva-accession-release/src/test/resources/application.properties
+++ b/eva-accession-release/src/test/resources/application.properties
@@ -12,6 +12,7 @@ parameters.fasta=src/test/resources/input-files/fasta/GCF_000409795.2.test.fna
 parameters.assemblyReportUrl=file:src/test/resources/input-files/assembly_report/GCF_000409795.2_Chlorocebus_sabeus_1.1_assembly_report.txt
 parameters.outputVcf=/tmp/output.vcf
 parameters.forceRestart=false
+parameters.chunkSize=1000
 
 spring.data.mongodb.database=test-db
 mongodb.read-preference=primary
