Add commit number to artifacts and add git info endpoint

--- a/eva-accession-ws/src/main/resources/application.properties
+++ b/eva-accession-ws/src/main/resources/application.properties
@@ -18,3 +18,6 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=|eva.accession.jdbc.url|
 spring.datasource.username=|eva.accession.user|
 spring.datasource.password=|eva.accession.password|
+
+management.endpoints.web.exposure.include=info,health
+management.info.git.mode=full
