--- a/eva-accession-ws/pom.xml
+++ b/eva-accession-ws/pom.xml
@@ -58,6 +58,7 @@
     </dependencies>
 
     <build>
+        <finalName>${project.artifactId}-${project.version}-${git.commit.id.abbrev}</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
