add parameter to force import when a contig is not found in the assembly report

--- a/eva-accession-import/src/test/resources/application.properties
+++ b/eva-accession-import/src/test/resources/application.properties
@@ -13,5 +13,6 @@ parameters.taxonomyAccession=9031
 parameters.chunkSize=100
 parameters.forceRestart=false
 parameters.pageSize=100
+parameters.forceImport=false
 
 mongodb.read-preference=primary
