--- a/eva-accession-import/src/test/resources/validate-contigs.properties
+++ b/eva-accession-import/src/test/resources/validate-contigs.properties
@@ -5,8 +5,6 @@ dbsnp.datasource.password=
 dbsnp.datasource.schema=src/test/resources/test-data/dbsnp-mirror-schema.sql
 dbsnp.datasource.data=src/test/resources/test-data/dbsnp-mirror-data.sql
 
-
-
 parameters.assemblyReportUrl=file:src/test/resources/input-files/assembly-report/Gallus_gallus-4.0_test_assembly_report.txt
 parameters.buildNumber=145
 parameters.chunkSize=100
@@ -18,6 +16,6 @@ parameters.assemblyName=Gallus_gallus-4.0
 parameters.assemblyAccession=GCF_000002315.4
 parameters.taxonomyAccession=9031
 parameters.forceRestart=false
-
+parameters.forceImport=false
 
 mongodb.read-preference=primary
