move contig reader and dbsno datasource to core module. create step to generate insdc contig file and integrate it with the rs release pipeline

--- a/eva-accession-release/src/test/resources/application.properties
+++ b/eva-accession-release/src/test/resources/application.properties
@@ -16,3 +16,14 @@ parameters.chunkSize=1000
 
 spring.data.mongodb.database=test-db
 mongodb.read-preference=primary
+
+dbsnp.datasource.driver-class-name=org.hsqldb.jdbcDriver
+dbsnp.datasource.url=jdbc:hsqldb:mem:db;sql.syntax_pgs=true;DB_CLOSE_DELAY=-1
+dbsnp.datasource.username=SA
+dbsnp.datasource.password=
+dbsnp.datasource.schema=src/test/resources/test-data/dbsnp-mirror-schema.sql
+dbsnp.datasource.data=src/test/resources/test-data/dbsnp-mirror-data.sql
+
+parameters.assemblyName=Chlorocebus_sabeus_1.1
+parameters.pageSize=100
+#parameters.buildNumber=
