fix job test after rebase

--- a/eva-accession-release/src/test/resources/previous-build-test.properties
+++ b/eva-accession-release/src/test/resources/previous-build-test.properties
@@ -11,6 +11,7 @@ parameters.assemblyAccession=GCF_000002315.4
 parameters.fasta=../eva-accession-core/src/test/resources/input-files/fasta/Gallus_gallus-5.0.test.fa
 parameters.assemblyReportUrl=file:src/test/resources/input-files/assembly-report/Gallus_gallus-4.0_test_assembly_report.txt
 parameters.outputVcf=/tmp/output.vcf
+parameters.outputVcfMerged=/tmp/output_merged.vcf
 parameters.forceRestart=false
 parameters.chunkSize=1000
 
