--- a/eva-accession-release/src/main/resources/application.properties
+++ b/eva-accession-release/src/main/resources/application.properties
@@ -1,11 +1,14 @@
 spring.batch.job.names=IMPORT_DBSNP_VARIANTS_JOB
 
 parameters.assemblyAccession=
+parameters.assemblyName=
 parameters.fasta=
 parameters.assemblyReportUrl=
-parameters.outputVcf=
+parameters.buildNumber=
+parameters.outputFolder=
 parameters.forceRestart=false
 parameters.chunkSize=1000
+parameters.pageSize=1000
 
 # job repository datasource
 spring.datasource.driver-class-name=org.postgresql.Driver
