--- a/eva-accession-release/src/test/resources/previous-build-test.properties
+++ b/eva-accession-release/src/test/resources/previous-build-test.properties
@@ -10,10 +10,13 @@ spring.jpa.show-sql=true
 parameters.assemblyAccession=GCF_000002315.4
 parameters.fasta=../eva-accession-core/src/test/resources/input-files/fasta/Gallus_gallus-5.0.test.fa
 parameters.assemblyReportUrl=file:src/test/resources/input-files/assembly-report/Gallus_gallus-4.0_test_assembly_report.txt
-parameters.outputVcf=/tmp/output.vcf
-parameters.outputVcfMerged=/tmp/output_merged.vcf
+parameters.outputFolder=/tmp/
 parameters.forceRestart=false
 parameters.chunkSize=1000
+parameters.assemblyName=Gallus_gallus-4.0
+parameters.pageSize=100
+parameters.buildNumber=145
+parameters.taxonomyAccession=9031
 
 spring.data.mongodb.database=test-db
 mongodb.read-preference=primary
@@ -24,8 +27,3 @@ dbsnp.datasource.username=SA
 dbsnp.datasource.password=
 dbsnp.datasource.schema=src/test/resources/test-data/dbsnp-mirror-schema.sql
 dbsnp.datasource.data=src/test/resources/test-data/dbsnp-mirror-data.sql
-
-parameters.assemblyName=Gallus_gallus-4.0
-parameters.pageSize=100
-parameters.buildNumber=145
-parameters.taxonomyAccession=9031
