add required parameters to eva-accession-release properties

--- a/eva-accession-release/src/main/resources/application.properties
+++ b/eva-accession-release/src/main/resources/application.properties
@@ -20,6 +20,11 @@ spring.datasource.tomcat.max-active=3
 # Only to set up the database!
 # spring.jpa.generate-ddl=true
 
+# dbSNP mirror datasource (to list contigs)
+dbsnp.datasource.driver-class-name=org.postgresql.Driver
+dbsnp.datasource.url=
+dbsnp.datasource.username=
+dbsnp.datasource.password=
 
 # MongoDB for storing imported accessions
 spring.data.mongodb.host=
@@ -32,4 +37,4 @@ mongodb.read-preference=|eva.mongo.read-preference|
 
 spring.main.web-environment=false
 
-logging.level.uk.ac.ebi.eva.accession.dbsnp=INFO
+logging.level.uk.ac.ebi.eva.accession.release=INFO
