deprecate: make parameters less prone to errors
added redundancy on the parameters so that you don't
run the deprecation over the whole collection by mistake
(misspelling and similar mistakes)

--- a/eva-accession-deprecate/src/main/resources/application.properties
+++ b/eva-accession-deprecate/src/main/resources/application.properties
@@ -16,7 +16,8 @@
 
 spring.batch.job.names=DEPRECATE_CLUSTERED_VARIANTS_JOB
 
-parameters.assemblyAccessions=
+parameters.assemblyAccession=
+parameters.deprecateAll=false
 parameters.chunkSize=1000
 
 # job repository datasource
