--- a/eva-accession-deprecate/src/test/resources/application_species_subset.properties
+++ b/eva-accession-deprecate/src/test/resources/application_species_subset.properties
@@ -18,4 +18,5 @@ spring.data.mongodb.database=test-db
 mongodb.read-preference=primary
 
 parameters.chunk-size=10
-parameters.assemblyAccessions=GCA_000000001.1,GCA_000000003.1
+parameters.assemblyAccession=GCA_000000001.1,GCA_000000003.1
+parameters.deprecateAll=false
